[tool.poetry]
name = "zeph-evaluation"
version = "0.1.0"
description = ""
authors = ["matthieugouel <matthieu.gouel@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
zeph = {path = "./zeph", develop = true}
matplotlib = "^3.5.1"
pandas = "^1.3.5"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
