[tool.poetry]
name = "zeph-evaluation"
version = "0.1.0"
description = ""
authors = ["Matthieu Gouel <matthieu.gouel@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
seaborn = "^0.11.2"
dioptra-zeph = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}
flake8 = "^4.0.1"
jupyterlab = "^3.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
